📃 refactor swagger docs
